Changes here and there, in seeding the data and registering a new user

--- a/GymBooking/Views/GymClasses/Details.cshtml
+++ b/GymBooking/Views/GymClasses/Details.cshtml
@@ -41,7 +41,7 @@
         @foreach (var attender in Model.AttendingMembers)
         {
             <dd class="col-sm-10">
-                @attender.ApplicationUser.Email
+                @attender.ApplicationUser.FullName
             </dd>
         }
 
