--- a/GymBooking/Views/GymClasses/GymClassesPartial.cshtml
+++ b/GymBooking/Views/GymClasses/GymClassesPartial.cshtml
@@ -6,17 +6,19 @@
         <td>
             <p>
                 @Html.DisplayFor(modelItem => gymClass.Name)
-                <a data-toggle="collapse" href="#memberlist-@gymClass.Id" role="button" aria-expanded="false">+</a>
+                <a data-toggle="collapse" href="#memberlist-@gymClass.Id" role="button" aria-expanded="false">
+                    <i class="fa fa-plus"></i>
+                </a>
             </p>
 
-            <div class="collapse" id="#memberlist-@gymClass.Id">
+            <div class="collapse" id="memberlist-@gymClass.Id">
                 @foreach (var member in gymClass.AttendingMembers.Select(m => m.ApplicationUser))
                 {
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title">@member.Email</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <a href="#" class="btn btn-primary btn-sm"></a>
+                            <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-info"></i></a>
                         </div>
                     </div>
                 }
@@ -36,8 +38,12 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <span> |</span>
+                <a asp-action="BookingToggle" asp-route-id="@gymClass.Id">Book/Unbook</a>
+            }
+            @if (User.IsInRole("Admin"))
+            {
+                <span> |</span>
                 <a asp-action="Edit" asp-route-id="@gymClass.Id">Edit</a> <span>|</span>
-                <a asp-action="BookingToggle" asp-route-id="@gymClass.Id">Book/Unbook</a> <span>|</span>
                 <a asp-action="Delete" asp-route-id="@gymClass.Id">Delete</a>
             }
         </td>
