--- a/GymBooking/Views/Shared/_Layout.cshtml
+++ b/GymBooking/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="GymClasses" asp-action="History">History</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GymClasses" asp-action="MyBookedPasses">My Booked Passes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GymClasses" asp-action="MyHistoryBookedPasses">My Previous Booked Passes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
