--- a/GymBooking/Views/GymClasses/Index.cshtml
+++ b/GymBooking/Views/GymClasses/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GymBooking.Models.GymClass>
+﻿@*@model IEnumerable<GymBooking.Models.GymClass>*@
+@model IndexViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -11,20 +12,34 @@
     <p><a asp-action="Create">Create New</a></p>
 }
 
+@if (User.IsInRole("Member"))
+{
+    <form asp-action="Index">
+        <div class="form-group row">
+            <div class="col-sm-2">History</div>
+            <div class="col-sm-10">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" asp-for="History" onchange="this.form.submit()" />
+                </div>
+            </div>
+        </div>
+    </form>
+}
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.GymClasses.First().Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartTime)
+                @Html.DisplayNameFor(model => model.GymClasses.First().StartTime)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Duration)
+                @Html.DisplayNameFor(model => model.GymClasses.First().Duration)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.GymClasses.First().Description)
             </th>
             <th></th>
         </tr>
