New version of My Booked Passes

--- a/GymBooking/Views/GymClasses/Index.cshtml
+++ b/GymBooking/Views/GymClasses/Index.cshtml
@@ -19,7 +19,7 @@
             <div class="col-sm-2">History</div>
             <div class="col-sm-10">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" asp-for="History" onchange="this.form.submit()" />
+                    <input class="form-check-input" type="checkbox" asp-for="History" id="history" />
                 </div>
             </div>
         </div>
