--- a/GymBooking/Views/GymClasses/MyBookedPasses.cshtml
+++ b/GymBooking/Views/GymClasses/MyBookedPasses.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<GymBooking.Models.GymClass>
 
 @{
-    ViewData["Title"] = "History";
+    ViewData["Title"] = "MyBookedPasses";
 }
 
-<h1>History</h1>
+<h1>MyBookedPasses</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -24,8 +27,27 @@
             <th></th>
         </tr>
     </thead>
-
     <tbody>
-        <partial name="GymClassesPartial" />
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StartTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Duration)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
